# sfse

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  sfse_readme.txt  sfse_whatsnew.txt
.github/workflows/: testbuild.yaml
cmake/: configuration.cmake  installation.cmake  versioning.cmake
sfse/: CMakeLists.txt  GameChargen.cpp  GameChargen.h  GameConsole.cpp  GameConsole.h  GameData.cpp  GameData.h  GameEvents.h  GameExtraData.cpp  GameExtraData.h  GameFormComponents.h  GameForms.cpp  GameForms.h  GameLock.cpp  GameLock.h  GameMemory.cpp  GameMemory.h  GameMenu.h  GameObjects.h  GameRTTI.cpp  GameRTTI.h  GameRTTI.inl  GameReferences.h  GameReflection.h  GameScript.cpp  GameScript.h  GameSettings.cpp  GameSettings.h  GameSingleton.h  GameStreams.h  GameTypes.cpp  GameTypes.h  GameUI.cpp  GameUI.h  Hooks_Command.cpp  Hooks_Command.h  Hooks_Data.cpp  Hooks_Data.h  Hooks_Scaleform.cpp  Hooks_Scaleform.h  (+33 more)
sfse_common/: BranchTrampoline.cpp  BranchTrampoline.h  BufferStream.cpp  BufferStream.h  CMakeLists.txt  CoreInfo.h  DataStream.cpp  DataStream.h  DirectoryIterator.cpp  DirectoryIterator.h  Errors.cpp  Errors.h  FileStream.cpp  FileStream.h  Log.cpp  Log.h  Relocation.cpp  Relocation.h  SafeWrite.cpp  SafeWrite.h  Types.h  Utilities.cpp  Utilities.h  sfse_version.h  sfse_version.rc
sfse_loader/: CMakeLists.txt  IdentifyEXE.cpp  IdentifyEXE.h  Inject.cpp  Inject.h  LoaderError.cpp  LoaderError.h  Options.cpp  Options.h  SigCheck.cpp  SigCheck.h  main.cpp  sfse_loader.manifest  sfse_loader_version.rc
xbyak/: CMakeLists.txt
